[package]
name = "lisp_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_arch = "x86_64")'.dependencies]
rustyline = "10.0.0"
pico-args = "0.5.0"

[target.'cfg(target_arch = "wasm32-unknown-unknown")'.dependencies]
wasm-bindgen = "0.2.86"
